# a100

./: CMakeLists.txt  inpainting.py
include/backend/: alembic_exporter.h  cuda_solver.h
include/common/: config.h  hair_data.h  shared_memory.h
include/frontend/: parameter_panel.h  renderer.h  timeline.h  viewport.h
shaders/: guide_fragment.glsl  guide_vertex.glsl  hair_fragment.glsl  hair_vertex.glsl
src/: main.cpp
src/backend/: alembic_exporter.cpp  collision.cu  cuda_solver.cpp  kernel.cu  wind_field.cu
src/common/: hair_data.cpp  shared_memory.cpp
src/frontend/: parameter_panel.cpp  renderer.cpp  timeline.cpp  viewport.cpp
